--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="F:/workspace/insightDataScienceAnomalyDetection/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Hao/Documents/project/insightDataScienceAnomalyDetection/lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
